tests/invalids/invalidIf4-2.gt
proc main ()
    int m;
begin
    if m < n then   
        int m;
    fi
end
